clusters/remote-3.71.43.116/prod/apps/diyet-app/overlays/namespace.yaml
# ============================
# Namespace - Live Environment
# Diyet App Live Environment
# ============================
apiVersion: v1
kind: Namespace
metadata:
  name: diyet-app
  labels:
    name: diyet-app
    environment: live
    app: diyet-app
