clusters/remote-3.71.43.116/prod/apps/diyet-app/overlays/environment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diyet-app
spec:
  template:
    spec:
      containers:
        - name: diyet-app
